@@ -71,7 +71,7 @@ This is the model you should extend.
 
 **Model Fields:**
 
-*FIELDS* - REQUIRED. A list of strings which name the fields that can be used for storage.
+*FIELDS* - REQUIRED. A list of strings which name the fields that can be used for storage. (See AdvancedFields section below for more)
 
 	 Example: ['Name', 'Description', 'Model', 'Price']
 
@@ -96,6 +96,65 @@ This is the model you should extend.
 *REDIS_CONNECTION_PARAMS* - provides the arguments to pass into "redis.Redis", to construct a redis object.
 
 	 Example: {'host' : '192.168.1.1'}
+
+
+
+Advanced Fields
+---------------
+
+IndexedRedis since version 4.0 allows you to pass elements of type IRField (extends str) in the FIELDS element.
+
+Doing so allows you to specify certain properties about the field.
+
+
+Example:
+
+	FIELDS = [ 'name', IRField('age', valueType=int), 'birthday' ]
+
+**Field Name**
+
+The first argument is the string of the field name.
+
+
+**Type**
+
+You can have a value automatically cast to a certain type (which saves a step if you need to filter further through the QueryableList results, like age__gt=15)
+
+by passing that type as "valueType". (e.x.  IRField('age', valueType=int))
+
+If you use "bool", the values 0 and case insensitive string 'false' will result in False, and 1 or 'true' will result in True.
+
+Be careful using floats, different hosts will have different floating point representations for the same value. Don't expect
+
+floats to work cross-platform. Use a fixed point number as the string type ( like myFixedPoint = '%2.5f' %( 10.12345 ) )
+
+
+**NULL Values**
+
+    For any type except strings (including the default type, string), a null value is assigned irNull (of type IRNullType).
+
+irNull does not equal empty string, or anything except another irNull. This is to destinguish say, no int assigned vs int(0)
+
+You can check a typed field against the "irNull" variable found in the IndexedRedis or IndexedRedis.fields.
+
+e.x. 
+
+	from IndexedRedis import irNull
+
+	..
+
+
+	# Can be used directly in the model filtering
+
+	notDangerFive = MyModel.objects.filter(dangerLevel__ne=irNull).filter(dangerLevel__ne=5).all()
+
+
+	# or in results, through Queryable List. Or direct comparison (not shown)
+
+	myResults = MyModel.objects.filter(something='value').all()
+
+	notDangerFive = myResults.filter(dangerLevel__ne=irNull).filter(dangerLevel__ne=5)
+
 
 
 Model Validation
